Update Locale conversion and URL creation methods
Replaced Locale constructor with forLanguageTag for better localization
support. Updated URL conversion to use URI.create to improve error
handling and avoid MalformedURLException.